--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api_practice",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "public/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +17,15 @@
   },
   "homepage": "https://github.com/akshat296/GoogleAPI#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "prompt": "^1.0.0"
+    "express-validator": "^4.3.0",
+    "multer": "^1.3.0",
+    "nodemon": "^1.14.7",
+    "path": "^0.12.7",
+    "prompt": "^1.0.0",
+    "readline": "^1.3.0"
   }
 }
